<resources>
    <string name="app_name">Kamu Nanya?</string>
    <string name="save">Simpan</string>
    <string name="saved">Tersimpan!</string>
    <string name="error_title_empty">Judul kuis tidak boleh kosong</string>
    <string name="error_desc_empty">Deskripsi kuis tidak boleh kosong</string>
    <string name="error_question_empty">Pertanyaan tidak boleh kosong</string>
    <string name="error_ans_empty">Jawaban tidak boleh kosong</string>
    <string name="error_alt1_empty">Pilihan 1 tidak boleh kosong</string>
    <string name="error_alt2_empty">Pilihan 2 tidak boleh kosong</string>
    <string name="error_alt3_empty">Pilihan 3 tidak boleh kosong</string>
    <string name="title_edit_quiz">Edit Kuis</string>
    <string name="title_edit_question">Edit Pertanyaan</string>
    <string name="question_index">Pertanyaan %d/%d</string>
    <string name="quiz_result1">Yahh, kamu menjawab benar %d dari %d soal</string>
    <string name="quiz_result2">Hmmm, kamu menjawab benar %d dari %d soal</string>
    <string name="quiz_result3">Hebat, kamu menjawab benar %d dari %d soal</string>
    <string name="quiz_result4">Horeee, kamu menjawab benar %d dari %d soal</string>
    <string name="share">Bagikan</string>
    <string name="share_quiz_text">Ayo mainkan %s:\n%s</string>
    <string name="share_result_content">Lihat hasil %s Saya</string>
    <string name="share_result_title">Bagikan hasil kuis</string>
    <string name="confirm_delete_title">Apakah anda yakin?</string>
    <string name="confirm_delete_content">Hapus \"%s\"</string>
    <string name="add_question">Tambah Soal</string>
    <string name="quiz_title_label">Judul Kuis :</string>
    <string name="quiz_desc_label">Deskripsi Kuis :</string>
    <string name="question_label">Pertanyaan :</string>
    <string name="answer_label">Jawaban :</string>
    <string name="other_choice_label">Pilihan Lain :</string>
    <string name="title">Judul</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="desc">Deskripsi</string>
    <string name="edit">Edit</string>
    <string name="delete">Hapus</string>
    <string name="create">Buat</string>
    <string name="start">Mulai</string>
    <string name="submit">Submit</string>
    <string name="repeat">Ulangi</string>
</resources>