<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainFragment">

        <Button
            android:id="@+id/createQuizButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:backgroundTint="@drawable/bg_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/editQuizButton"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/font_family"/>

        <Button
            android:id="@+id/editQuizButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:backgroundTint="@drawable/bg_btn"
            android:fontFamily="@font/font_family"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/deleteButton"
            app:layout_constraintStart_toEndOf="@+id/createQuizButton" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:backgroundTint="@drawable/bg_btn"
            android:fontFamily="@font/font_family"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/startQuizButton"
            app:layout_constraintStart_toEndOf="@+id/editQuizButton" />

        <Button
            android:id="@+id/startQuizButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:backgroundTint="@drawable/bg_btn"
            android:fontFamily="@font/font_family"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/deleteButton" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingTop="30dp"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/createQuizButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="4"
            tools:listitem="@layout/quiz_item"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>