<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditQuestionFragment"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/pertanyaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/question_label"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:fontFamily="@font/font_family"/>

        <EditText
            android:id="@+id/isi_pertanyaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/font_family"
            android:paddingLeft="10dp"
            tools:text="Contoh pertanyaan"
            android:background="@drawable/border_edit"/>

        <TextView
            android:id="@+id/jawaban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/answer_label"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:fontFamily="@font/font_family"/>

        <EditText
            android:id="@+id/isi_jawaban"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="10dp"
            tools:text="Contoh Jawaban"
            android:fontFamily="@font/font_family"
            android:background="@drawable/border_edit"/>

        <TextView
            android:id="@+id/pilihan_lain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_choice_label"
            android:textColor="#000000"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="16dp"
            android:fontFamily="@font/font_family"/>

        <EditText
            android:id="@+id/pilihan1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="10dp"
            tools:text="Contoh pilihan 1"
            android:fontFamily="@font/font_family"
            android:background="@drawable/border_edit"/>


        <EditText
            android:id="@+id/pilihan2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="10dp"
            tools:text="Contoh pilihan 2"
            android:fontFamily="@font/font_family"
            android:background="@drawable/border_edit"/>


        <EditText
            android:id="@+id/pilihan3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minHeight="48dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="10dp"
            tools:text="Contoh pilihan 3"
            android:fontFamily="@font/font_family"
            android:background="@drawable/border_edit"/>

        <Button
            android:id="@+id/createQuizButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:background="@drawable/item_soalborder"
            android:textColor="#000000"
            android:gravity="center"
            app:backgroundTint="@drawable/bg_btn"
            android:fontFamily="@font/font_family"
            />

    </LinearLayout>
</layout>